# sample-package

./: .readthedocs.yml  Makefile  README.md  setup.cfg
conda/: env.yaml
docs/source/: conf.py  index.rst  modules.rst  sample_pkg.rst
docs/source/tutorial/: sample_nb.ipynb  tut.rst
sample_pkg/: cli.py  sample.py
