[metadata]
name = sample_pkg
version = 0.0.1

[options]
packages = find:
install_requires =
    click

[options.packages.find]
where = sample_pkg
include = *.py

[options.entry_points]
console_scripts =
    sample-pkg = sample_pkg.cli:main

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    test
